mypkg/objects/Cart__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Paid</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Payable__c</fullName>
        <formula>IF( E_Voucher__c =&quot;WELCOME25&quot;, Total_Amount__c  -  Discount_After_EVoucher__c,  Total_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CVV__c</fullName>
        <label>CVV</label>
        <length>3</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Choose_Shipping_Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Choose Shipping Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Shipping_Address__c.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shipping_Address__c</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirm_Card_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click on make Payment for the next Step</inlineHelpText>
        <label>I hereby confirm the details.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discount_After_EVoucher__c</fullName>
        <formula>IF( E_Voucher__c =&quot;WELCOME25&quot;,( Total_Amount__c * 0.25), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount After EVoucher</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>E_Voucher__c</fullName>
        <label>E-Voucher</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Product__c</fullName>
        <label>Number of Product</label>
        <summarizedField>Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Item__c.Cart_No__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Placed__c</fullName>
        <label>Order Placed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Place_Another_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Place Another Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Order_Confirmation_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Order Confirmation Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Auto-Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Item__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Item__c.Cart_No__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Types_of_Product__c</fullName>
        <label>Types of Product</label>
        <summaryForeignKey>Item__c.Cart_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cart</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Send_Order_Confirmation_Mail__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Cart Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_Place_Order_Status_Pending</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Status__c ,&quot;Pending&quot;) , Send_Order_Confirmation_Mail__c ,false)</errorConditionFormula>
        <errorMessage>You cannot place this order until it is approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_EVoucher</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT( ISBLANK( E_Voucher__c ) )  &amp;&amp; E_Voucher__c   &lt;&gt; &quot;WELCOME25&quot;,true,false)</errorConditionFormula>
        <errorMessage>This is not a valid Coupon</errorMessage>
    </validationRules>
</CustomObject>